se cambio contenido de texto

--- a/index5.html
+++ b/index5.html
@@ -10,9 +10,8 @@
 <body>
 
     <div class="clase1">
-        <p>Yo creo que una caja contenedora debe necesitar
-            un <strong>borde</strong> o <em>algo</em>,
-            pero esto <strong>se me sale de las manos</strong>!</p>
+        <p>cambio este texto<strong>por</strong> este  <em>nuevo</em>,
+            texto <strong>wao</strong>!</p>
     </div>
 
 
