--- a/index7.html
+++ b/index7.html
@@ -10,5 +10,6 @@
     <strong> hola
     </strong>
     <p> esto es guardar todo en git</p>
+    entonces este es otro texto por fuera de etiqueta
 </body>
 </html>
